Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10199

sanity test_56xb: hard links individually migrated (12 != 11)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.11.0, Lustre 2.10.4
    • Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Bob Glossman <bob.glossman@intel.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/740cdf26-c31d-11e7-88ab-52540065bddc.

      The sub-test test_56xb failed with the following error:

      hard links individually migrated (12 != 11)
      

      strongly suspect this is due to the very recently landed "LU-6051 utils: allow lfs_migrate to handle hard links"
      test 56xb is brand new, only introduced in this patch.
      I'm wondering if this test has ever been passed on any SLES version.

      Info required for matching: sanity 56xb

            sguminsx Steve Guminski (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: